MMM comments on discussion

--- a/4.mss/main.tex
+++ b/4.mss/main.tex
@@ -193,12 +193,12 @@
 \section{Results}
 
 
-    The model framework we present here quantifies pair-wise interaction strengths between species from diverse single-trophic community data. Several aspects of our model and its implementation allow us to better capture complex features of plant communities compared to co-occurrence networks. Firstly, interactions are estimated from species effects on each other's growth rates and thus capture how interactions may directly affect species abundances, rather than spatial association patterns. Moreover, our framework is flexible to the inclusion of many species, as with co-occurrence networks. Two features make this possible: the response-effect model to estimate unobserved interactions, and a Bayesian implementation to deal with many parameters. The response-effect model allows us to deal with a small number of unobserved interactions by relaxing assumptions for those cases and estimating more general 'effect' and 'response' parameters from  pair-wise interactions which are observed. The Bayesian implementation means that parameters are estimated using MCMC algortihms, which can estimate more parameters than with more frequentist approaches. This approach also returns parameter estimates as prosterior distributions rather than simple mean and standard deviations. By having access to the full distribution of likely values for every interaction, we can draw samples of likely networks from these distributions and thus incorporate some measure of variation and uncertainty around interaction values pretty easily. \\
+    The model framework we present here quantifies pair-wise interaction strengths between species from diverse single-trophic community data. Several aspects of our model and its implementation allow us to better capture complex features of plant communities compared to co-occurrence networks. Like co-occurrence networks, our framework is flexible to the inclusion of many species. Unlike co-occurrence networks, however, interactions in our model are estimated from species effects on each other's growth rates.  This allows us to capture how interactions may directly affect species abundances, rather than spatial association patterns. Two features make this possible: the response-effect model to estimate unobserved interactions, and a Bayesian implementation to deal with many parameters. The response-effect model allows us to deal with a small number of unobserved interactions by relaxing assumptions for those cases and estimating more general 'effect' and 'response' parameters from the pair-wise interactions that are observed. The Bayesian implementation means that parameters are estimated using MCMC algorithms, which can estimate more parameters than with more commonly used frequentist approaches (add REFs – find in Masters??). This approach also returns parameter estimates as posterior distributions rather than simple mean and standard deviations. By having access to the full distribution of likely values for every interaction, we can draw samples of likely networks from these distributions and thus incorporate some measure of variation and uncertainty around interaction values pretty easily.  \\
 
 
-    Our method also breaks from traditional plant population dynamic models by allowing facilitation, whereas they usually only model competition. Facilitation is very important to community dynamics but is not explicitely measured or recognised in these traditional approaches. Many spatial association methods do not recognise facilitative interactions either (I think? e.g. the cooccur package?). Thus our method allows us to investigate the effects of competition and facilitation at the same time, and across many species. \\
+    Another way in which our method breaks from traditional plant population dynamic models is by allowing for facilitation. Associational networks and other approaches to interaction-based networks allow for competition alone (That’s not true, so qualify that statement – may talk a bit more about pop dyn approaches, and then also association?). Facilitation is well-known to be very important to community dynamics but is not explicitly measured or recognised by these approaches. Thus, our method allows us to investigate the effects of competition and facilitation at the same time, and across many species.   \\
 
-    Our methods makes it simpler for empiricists to estimate diverse interaction networks by providing an alternative to co-occurrence methods. Overall, our framework paints a more realistic picture of plant communities and their interactions: diversity is included, multiple interaction types can occur and unobserved interactions are not simply assigned to '0'. In turn, this allows empiricists to access network tools to better understand the plants and ecosystems they study, as well as non-trophic communities in general.\\
+     Our methods make it simpler for empiricists to estimate diverse interaction networks by providing an alternative to co-occurrence methods. Overall, our framework paints a more realistic picture of plant communities and their interactions: diversity is included, multiple interaction types can occur and unobserved interactions are not simply assigned to '0'. In turn, this allows empiricists to access network tools to better understand the plant communities and ecosystems they study, as well as non-trophic communities in general. \\
 
 
 
@@ -214,11 +214,14 @@
 
 
 \section{Discussion}
-
     
-    The model framework presented here allows the estimation of species-rich interaction matrices from plant community data. Our paper makes it easier for empiricists to characterise species interactions in their systems, as usually they need to come up with complex models to resolve all interactions. We provide a model for annual plant systems and a method which can be extended to any horizontal community for which there is a model of population dynamics - you will just need to adapt the model and scaling of interactions.\\
+    These two next paragraphs can be deleted or merged with the ‘results’ section above especially once I’ve added the extra results. 
 
-    The interaction matrices this model estimates are fundamentally different to association networks, which are a common alternative to estimating interactions in species-rich communities. Our estimates are direct per-capita effects of one species on another so have direct consequences on population abundances. Our model and it's implementation can estimate these interactions for many species, as well as include intraspecific interactions and facilitation. Our framework thus produces a better representation of the complexity of real plant communities and their interactions. This then allows us to do a bunch of cool stuff to a) better understand plant communities in general and b) better understand a specific plant system. Though our method still requires a lot of data, people interested in applications of this model (conservationsts and ecosystem management) are likely to have access to the kind of monitoring data which is needed. 
+ 
+    
+    The model framework presented here allows the estimation of species-rich interaction matrices from plant community data. Our paper makes it easier for empiricists to characterise species interactions in their systems, as usually they need to come up with complex models to resolve all interactions. We provide a model for annual plant systems and a method which can be extended to any horizontal community for which there is a model of population dynamics - you will just need to adapt the model and scaling of interactions. \\
+
+    The interaction matrices this model estimates are fundamentally different to association networks, which are a common alternative to estimating interactions in species-rich communities. Our estimates are direct per-capita effects of one species on another so have direct consequences on population abundances. Our model and it's implementation can estimate these interactions for many species, as well as include intraspecific interactions and facilitation. Our framework thus produces a better representation of the complexity of real plant communities and their interactions. This then allows us to do a bunch of cool stuff to a) better understand plant communities in general and b) better understand a specific plant system. Though our method still requires a lot of data, people interested in applications of this model (conservationists and ecosystem management) are likely to have access to the kind of monitoring data which is needed.  
 
     % Make it easier for empiricists to characterise species interactions in their system. Typically experimenters who want to build measure these things need to come up with complex models to resolve all interactions. If your data is plant annuals you can just plug your data right in. If it's a different type of species, you just need to adapt the population model and scaling of the interactions to work with your particular system. 
 
@@ -226,46 +229,39 @@
     % - deals with some unobserved interactions
     % - derived from pop dynamic models so direct consequences on pop abundances
     % - deals with facilitation 
+    % - pairwise interactions (directional!)
 
     % -> better representation of complexity of real plant communities
 
     \subsection{Limitations}
         
-        Though our framework does provide a way of estimating interactions between species which are not observed to cooccur, care should be taken that these unobserved interactions do not dominate the network. The method we propose uses observed interactions to then estimate simpler parameters which allow us to approximate the remaining interactions. This method thus works better the more observed interactions we have with which to estimate the unobserved ones. \\
+        Though our framework does provide a way of estimating interactions between species which are not observed to cooccur, care should be taken that these unobserved interactions do not dominate a resulting network. The method we propose uses observed interactions to estimate simpler parameters which allow us to approximate the remaining interactions. This method thus works better the more observed interactions we have with which to estimate the unobserved ones. This method is not appropriate for datasets dominated by missing data on interactions.  It is also important to consider the likely reasons for missing interactions.  For instance, species pairs known to lack overlapping environmental requirements likely do not occur together do to environmental filtering that precedes interaction between individuals of the species.  It would not be appropriate to include such pairs in our framework. These interactions can be replaced with a 0... briefly bring up forbidden interactions, and how that framework (get a ref) could be helpful to people who have a lot of missing observations, or where there’s likely to be strong niche differences between species leading to no interactions. \\
 
-        Our model framework is aimed to helping empiricists who want to estimate interactions for non-trophic communities - but these empiricists will still require large amounts of data. Though the MCMC sampling algorithm does allow for many parameters to be estimated, it is crucial to check chain-mixing and model behaviour to verify the full parameter space is sampled. I wouldn't recommend fewer than 20 observations per focal species, and I still recommend grouping species which appear very very rarely. More data will also give more precise estimates of interaction strengths. 
+        Our model framework is aimed to helping empiricists who want to estimate interactions for non-trophic horizontal communities - but these empiricists will still require large amounts of data. Though the MCMC sampling algorithm does allow for many parameters to be estimated, it is crucial to check chain-mixing and model behaviour to verify that the full parameter space is sampled. We wouldn't recommend fewer than 20 observations per focal species, and we do recommend grouping species which appear very very rarely (Give details, what criteria did I use? Can also say you can change that, especially if you know the system well...). More data will also give more precise estimates of interaction strengths.   
 
-        The kind of people or organisations who this paper might be useful for though are perhaps more likely than most to have access to this kind of data, given that many conservation or ecosystem management initiatives involve regular monitoring of the abundances of different species in the system. 
-
-    % Why do we want to do that? 
-    % 1. to learn more about plant communities in general 
-    % interaction networks (many species, pop dyn models, facilitation) tie in with diversity and stability. Characterise how species tend to interact (network motifs). Many opportunities, this list is not exhaustive
-
-    \subsection{Understanding community diversity and stability}
-
-        Quantifying the interaction networks of plant communities allows us to explore how the mechanisms maintaining diversity and stability operate across a broad number of species. Self-regulation, for example, is an extremely important driver of community stability (Barabas 2017 NEE) and arises from how individuals of the same species interact with one another. Whereas same-species effects cannot be estimated by association networks, our framework quantifies intraspecific interactions and allows us to measure the strength and prevalence of competitive of facilitative density-dependence. Measures of intra and interspecific interactions can also allow us to estimate niche overlap between species: weak interactions between species indicates they are not sharing or competing for many resources, and occupy different niche spaces in the community (ref??). Strong competitive self-regulation, and weak interactions between two species, are two of many mechanisms leading to continued coexistence in plant communities.\\
-
-        A key feature of our model framework is the inclusion of facilitative interactions, which have long been disregarded in plant population models and theoretical frameworks of plant diversity-maintenance. The importance of facilitative interactions to community structure and patterns of abundance has long been recognised (Bruno Callaway 2003) but there is still little consensus on how they may affect coexistence between species. Recent work suggests facilitation may be common (ref) and may harm or benefit species diversity and stability depending on the circumstances (ref). Our framework provides a mean to investigate the prevalence and strength of facilitation across multiple species, and how it may act in relation to competition and species diversity. \\
-     
-        Ultimately, quantifying plant interaction networks allows us to apply tools from network theory which will help us understand not only how plants interact, but also how these interactions drive community-level patterns of abundance and diversity. Several metrics already exist for describing network structure such as weighted connectance or relative intransitivity, though these are fewer than for trophic or bipartite networks. Adapting measures of nestedness or modularity for example to non-sparse networks (as plant communties typically are) would allow us to further characterise how interactions and species are organised. These metrics all relate to different aspects of stability and could greatly inform us on how diversity is maintained between plants. 
-        Further avenues also exist to characterise how species tend to interact. Network motifs for example are the units which makes up a network, such as a three species food chain or an intransitive interaction loop. These motifs have important biological meaning. We could extend the network motif approach to single-trophic networks to characterise the kind of roles that species can occupy in relation to the wider plant community (Cirtwill ref!).\\
-
-
-    % 2) to learn more about your plant community specifically 
-    % application for ecosystem management: 
-    % - identifying important species e.g. keystone, foundation, connector
-    % - integration of invasive species
-    % - strategies for managing threatened species especially rares (often facilitate with other rares) 
 
     \subsection{Applications to ecosystem management}
 
-        Interaction networks provide a unique lense with which to examine an ecological community. Specifically, interaction networks allows us to determine important species which have particular effects on the wider community, as well as examine how species of interest are affected by the whole community. These two aspects are particularly important to ecosystem management and conservation because they allow us to establish management strategies which are adapted to the community and species involved, and which acknowledge the interlinkedness of species and their effects on one another. \\
+        Interaction networks provide a unique lens with which to examine an ecological community. Specifically, interaction networks allow us to determine important species which have particular effects on the wider community, as well as to examine how species of interest are affected by the whole community. These two aspects are particularly important to ecosystem management and conservation because they allow us to establish management strategies which are adapted to the community and species involved, and which acknowledge the interlinkedness of species and their effects on one another.  \\
 
-        Certain species play important roles in the community which can be deduced from their position in the interaction network. Keystone species for example are both crucial to maintaining the organisation and diversity of their community, and have exceptionally strong effects on other species (Mills et al. 1993), often leading to secondary extinctions when they are removed from a network. In single-trophic systems, keystone species could be identified by their high in-strength ... Foundation species on the other hand ... Foundation species can be identified by high abundance, connectedness and predominantly facilitative interactions.  \\
+        Certain species play important roles in the community which can be deduced from their position in the interaction network. Keystone species for example are both crucial to maintaining the organisation and diversity of their community, and have exceptionally strong effects on other species (Mills et al. 1993), often leading to secondary extinctions when they are removed from a network. In single-trophic systems, keystone species could be identified by their high in-strength ... Foundation species on the other hand ... Foundation species can be identified by high abundance, connectedness and predominantly facilitative interactions. \\
 
-        Network approaches can also be used to determine how specific species are integrated within the community. We can determine whether invasive species are competing with or impacting many of the native species, or if they are disproportionally affecting a handful of species. Weak interactions between invasive and native species would indicate low resource sharing, such that the invasive species are probably exploiting 'empty' niche space rather taking over the niche space of natives. Threatened species would also benefit from this type of analysis, as we could deduce which other community members are hindering or helping their recovery. This is especially relevant for rare species, as recent work suggests they are the prime emitters and beneficiaries of facilitative interactions, forming mutualistic refuges from competitive dominants. If that is indeed the case, quantifying the interaction networks would help us identify which other species may be involved in 'proping up' the species of interest. \\
+        Network approaches can also be used to determine how specific species are integrated within the community. We can determine whether invasive species are competing with or impacting many of the native species, or if they are disproportionally affecting a handful of species. Weak interactions between invasive and native species would indicate low resource sharing, such that the invasive species are probably exploiting 'empty' niche space rather taking over the niche space of natives. Threatened species would also benefit from this type of analysis, as we could deduce which other community members are hindering or helping their recovery. This is especially relevant for rare species, as recent work suggests they are the prime emitters and beneficiaries of facilitative interactions, forming mutualistic refuges from competitive dominants. If that is indeed the case, quantifying the interaction networks would help us identify which other species may be involved in 'propping up' the species of interest.  \\
 
         Overall, quantifying the community interaction network allows us to direct conservation and management efforts in ways which work with the community, rather than against it.
+
+      
+    \subsection{Understanding community diversity and stability}
+
+        Quantifying the interaction networks of plant communities allows us to explore how the mechanisms maintaining diversity and stability operate across a broad number of species. Self-regulation, for example, is an extremely important driver of community stability (Barabas 2017 NEE) and arises from how individuals of the same species interact with one another. Whereas same-species effects cannot be estimated by association networks, our framework quantifies intraspecific interactions and allows us to measure the strength and prevalence of competitive and facilitative density-dependence. Measures of intra and interspecific interactions can also allow us to estimate niche overlap between species: weak interactions between species indicate they are not sharing or competing for many resources, and occupy different niche spaces in the community (ref??). Strong competitive self-regulation, and weak interactions between two species, are two of many mechanisms leading to continued coexistence in plant communities.\\
+
+        A key feature of our model framework is the inclusion of facilitative interactions, which have long been disregarded in plant population models and theoretical frameworks of plant diversity-maintenance. The importance of facilitative interactions to community structure and patterns of abundance has long been recognised (Bruno Callaway 2003) but there is still little consensus on how they may affect coexistence between species. % MMM comment on ‘coexistence’: Needs to be clear if you have a good way to make this link or not – Maybe use ‘biodiversity’ or synonym, not coex? 
+        Recent work suggests facilitation may be common (ref) and may harm or benefit species diversity and stability depending on the circumstances (ref). Our framework provides a means to investigate the prevalence and strength of facilitation across multiple species, and how it may act in relation to competition and species diversity.  \\
+     
+        Ultimately, quantifying plant interaction networks allows us to apply tools from network theory which will help us understand not only how plants interact, but also how these interactions drive community-level patterns of abundance and diversity. Several metrics already exist for describing network structure such as weighted connectance or relative intransitivity, though these are fewer than for trophic or bipartite networks. Adapting measures of nestedness or modularity for example to non-sparse networks (as plant communities typically are) would allow us to further characterise how interactions and species are organised. These metrics all relate to different aspects of stability and could greatly inform us on how diversity is maintained between plants.  
+
+        Further avenues also exist to characterise how species tend to interact. Network motifs for example are the units which makes up a network, such as a three species food chain or an intransitive interaction loop. These motifs have important biological meaning. We could extend the network motif approach to single-trophic networks to characterise the kind of roles that species can occupy in relation to the wider plant community (Cirtwill ref!). \\
+
 
 
     \subsection{Future research directions}
