added a few results...

--- a/4.mss/main.tex
+++ b/4.mss/main.tex
@@ -208,7 +208,9 @@
 
     % %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-    Of the 484 focal x focal interactions, 85\% were estimated using the IFM and 15\% using the REM. Including non-focal neighbours, the number of interactiosn to be estimated was 1144 and 60\% were estimated by the REM.
+    Of the 484 focal x focal interactions, 85\% were estimated using the IFM and 15\% using the REM. Including non-focal neighbours, the number of interactions to be estimated was 1144 and 60\% were estimated by the IFM
+
+    Across all focal neighbour interaction, 65\% were competitive.
 
     % We built an interactio nmatrix for .... whole comm only. We estiamted so many interactions with the IFM and so many with the REM. So many interactions were competitive, whereas so many were facilitative. We estimated so many intraspecific interactions. Species node distribution followed an xx distribution. 
 
